# pyure

./: .gitignore  CRN_PURE_TXTL_MGaptdeGFP_FINAL.ipynb  Dockerfile  README.md  pure_mid_detail.py  pure_most_detailed.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
src/pyure/: __init__.py  estimates.py  exceptions.py  export.py  initial_conditions.py  model_builders.py  plotting.py  simulation.py  validation.py
tests/: test_export_plotting.py  test_initial_conditions.py  test_model_builders.py  test_validation.py
