[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyure"
version = "0.1.0"
description = "Research web app for PURE CRN model generation and simulation."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "BSD 3-Clause License"}
authors = [
  {name = "Ayush Pandey"}
]
dependencies = [
  "biocrnpyler>=1.3",
  "bioscrape>=1.2",
  "numpy>=1.23",
  "pandas>=2.0",
  "plotly>=5.0",
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
